# sockat

./: .clang-format  CMakeLists.txt  rebuild.sh
src/: App.cpp  App.hpp  MainFrame.cpp  MainFrame.hpp  Sockat.cpp  Sockat.hpp  main.cpp
src/Editors/: HtmlEditor.cpp  HtmlEditor.hpp
